WaterMill/docs/netbeans/netbeans_cygwin64.txt
*******************
***	cmd output	***
*******************
When run
...\WaterMill\source\scripts\runCygwin.cmd
no output is visible on the screen.

If you copy 
...\WaterMill\dist\Debug_CygWin64\Cygwin-Windows\watermill.exe
...\WaterMill\dist\Debug_CygWin64\Cygwin-Windows\freeglut.dll

to 
C:\cygwin64\home\Krzysztof

And in cygwin console run
watermill.exe

Then output is visible

***************
***	C++11	***
***************
Project -> Properties -> Build -> C++ Compiler
Additional Options
-std=c++11

***************
***	Cygwin	***
***************
To install additional cygwin compoments - run
C:\home\normalFiles\cygwin_package\setup-x86_64.exe

	
***********************
***	OpenGL - Cygwin	***
***********************



Installing Freeglut for Cygwin


1.
To install additional cygwin compoments - run
C:\home\normalFiles\cygwin_package\setup-x86_64.exe

Select Packages
Search: freeglut
Devel Default:
mingw64-i686-freeglut
mingw64-x64_64-freeglut



2. Following folder is created:
C:\cygwin64\etc\setup\mingw64....lst.gz
C:\cygwin64\usr\i686-w64-mingw32\sys-root\mingw\include\GL
C:\cygwin64\usr\x86_64-w64-mingw32\sys-root\mingw\include\GL
C:\cygwin64\usr\share\doc\mingw64-i686-freeglut
C:\cygwin64\usr\share\doc\mingw64-x86_64-freeglut


-----------------------
---	OpenGL - Cygwin	---
-----------------------
C:\cygwin64\lib\w32api\
	libopengl32.a
	libglu32.additional

C:\cygwin64\usr\include\w32api
	windows.h
	
C:\cygwin64\usr\include\w32api\GL
	gl.h
	glu.h
	glaux.h
	
-------------------
---	NetBeans	---
-------------------
Project -> Properties -> Build 
Configuration:
	Debug_Cygwin64
		
NetBeans > Tools > Options > C/C++ > Code Assistance
Tool Collection: Cygwin
	

Install freeglut in:
	C:\home\myImportantFiles\projects\git\libraries\freeglut

Project -> Properties -> Build -> C++ Compiler -> C++ Standard
C++11	
	
Project -> Properties -> Build -> C++ Compiler -> Include Directories
	../../../../libraries/freeglut/include
	
Project -> Properties -> Build -> Linker -> Additional Library Directories
	../../../../libraries/freeglut/lib/x64

Project -> Properties -> Build -> Linker -> Libraries
Add Option -> Other Option	
	-lfreeglut -lopengl32 -Wl,--subsystem,windows
	
Copy
	C:\home\myImportantFiles\projects\git\libraries\freeglut\bin\x64\freeglut.dll
into
	C:\home\myImportantFiles\projects\git\Main\WaterMill\dist\Debug_Cygwin64\Cygwin-Windows
	
	
	
Project -> Properties -> Build -> Linker -> Libraries
Add Option -> Other Option			
	-lfreeglut -lopengl32 -Wl,--subsystem,windows
	
***************************
***	Cygwin libraries	***
***************************
#include <psapi.h>

Project -> Properties -> Build -> Linker -> Libraries
Add Option -> Other Option		
	-lpsapi	
	
Boost:	
	-lboost_system
(link to C:\cygwin64\lib\libboost_system.dll.a)	
	-lboost_filesystem

	
Project -> Properties -> Build -> Linker -> Additional Library Directories
C:\home\myImportantFiles\projects\git\libraries\boost_1_60_0\stage\lib
	
***********************
***	Cygwin Boost	***
***********************
Installing Boost for Cygwin


1.
To install additional cygwin compoments - run
C:\home\normalFiles\cygwin_package\setup-x86_64.exe

Select Packages
Search: boost
Libs Default:
libboost_...

2. Following folder is created:
C:\cygwin64\usr\include\boost
C:\cygwin64\etc\setup\libboost_....lst.gz
C:\cygwin64\lib\libboost_...dll.a
C:\cygwin64\usr\share\doc\boost

***************************************
***	error: template with C linkage	***
***************************************

During build following error appeared:

mkdir -p build/Debug_CygWin/Cygwin-Windows/_ext/53f81259
rm -f "build/Debug_CygWin/Cygwin-Windows/_ext/53f81259/GameCodeApp.o.d"
g++ -std=c++11   -c -g -I../../libraries/boost_1_60_0 -I../../libraries/freeglut/include -MMD -MP -MF "build/Debug_CygWin/Cygwin-Windows/_ext/53f81259/GameCodeApp.o.d" -o build/Debug_CygWin/Cygwin-Windows/_ext/53f81259/GameCodeApp.o ../../root/source/gameInitialization/GameCodeApp.cpp

In file included from /usr/lib/gcc/x86_64-pc-cygwin/5.3.0/include/c++/vector:62:0,
                 from ../../root/source/gameInitialization/windows/Cygwin64Calls.hpp:23,
                 from ../../root/source/gameInitialization/SystemCalls.hpp:41,
                 from ../../root/source/gameInitialization/GameCodeApp.cpp:24:
/usr/lib/gcc/x86_64-pc-cygwin/5.3.0/include/c++/bits/stl_construct.h:72:3: error: template with C linkage
   template<typename _T1, typename... _Args>
   ^


The source of the error were following lines from 
...\Main\WaterMill\source\gameInitialization\SystemCalls.hpp
   

#ifdef __cplusplus
extern "C" {
#endif

....


#ifdef __cplusplus
}
#endif

After removing themm, the error disappeared.


   
Path=   
C:\oraclexe\app\oracle\product\11.2.0\server\bin;C:\ProgramData\Oracle\Java\javapath;C:\Python34\;C:\Python34\Scripts;C:\Program Files\Common Files\Microsoft Shared\Windows Live;C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;C:\Program Files (x86)\PC Connectivity Solution\;%SystemRoot%\system32;%SystemRoot%;%SystemRoot%\System32\Wbem;C:\Program Files (x86)\EgisTec MyWinLocker\x86;C:\Program Files (x86)\EgisTec MyWinLocker\x64;C:\Program Files (x86)\ATI Technologies\ATI.ACE\Core-Static;C:\Program Files (x86)\Windows Live\Shared;C:\Program Files (x86)\VisualSVN Server\bin;C:\Program Files (x86)\Skype\Phone\;C:\MinGW\bin;C:\cygwin64\bin;%systemroot%\System32\WindowsPowerShell\v1.0\



ifdef __cplusplus
extern "C" {
#endif